force-app/main/default/objects/JobPosition__c/JobPosition__c.object-meta.xml
<CustomObject>
    <label>Job Position</label>
    <nameField>
        <label>Position Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Positions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>