force-app/main/default/objects/JobPosition__c/fields/CandidateLevel__c.field-meta.xml
<CustomField>
    <fullName>CandidateLevel__c</fullName>
    <label>Candidate Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Junior Software Engineer</fullName>
            </value>
            <value>
                <fullName>Middle Software Engineer</fullName>
            </value>
            <value>
                <fullName>Senior Software Engineer</fullName>
            </value>
            <value>
                <fullName>Lead Software Engineer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>