force-app/main/default/objects/JobPosition__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Job Positions</relationshipLabel>
    <relationshipName>Job_Positions</relationshipName>
    <type>Lookup</type>
</CustomField>