force-app/main/default/objects/JobPosition__c/fields/Company_offices__c.field-meta.xml
<CustomField>
    <fullName>Company_offices__c</fullName>
    <formula>IF(ISPICKVAL(Location__c,&apos;Ukraine&apos;) ,&apos;Kyiv, Lviv, Ternopil&apos; , 
IF( ISPICKVAL(Location__c, &apos;USA&apos;), &apos;Chicago, Boston, New York&apos; , 
IF( ISPICKVAL(Location__c, &apos;Belarus&apos;), &apos;Minsk, Brest&apos;, 
IF( ISPICKVAL(Location__c, &apos;Poland &apos;),&apos;Wroclaw&apos;,&apos;Not defined!&apos;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company offices</label>
    <type>Text</type>
</CustomField>