force-app/main/default/objects/JobPosition__c/fields/HR_Manager__c.field-meta.xml
<CustomField>
    <fullName>HR_Manager__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>HR Manager</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Job Positions</relationshipLabel>
    <relationshipName>Job_Positions</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>