force-app/main/default/objects/JobPosition__c/fields/Max_Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Max_Expected_Salary__c</fullName>
    <label>Max Expected Salary</label>
    <summarizedField>JobApplication__c.Expected_Salary__c</summarizedField>
    <summaryForeignKey>JobApplication__c.JobPosition__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>