force-app/main/default/objects/JobPosition__c/fields/Min_Expected_Salary__c.field-meta.xml
<CustomField>
    <fullName>Min_Expected_Salary__c</fullName>
    <label>Min Expected Salary</label>
    <summarizedField>JobApplication__c.Expected_Salary__c</summarizedField>
    <summaryForeignKey>JobApplication__c.JobPosition__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>