force-app/main/default/objects/JobPosition__c/fields/Open_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Open_Due_Date__c</fullName>
    <label>Open Due Date</label>
    <type>Date</type>
</CustomField>