force-app/main/default/objects/JobPosition__c/fields/Position_Budget__c.field-meta.xml
<CustomField>
    <fullName>Position_Budget__c</fullName>
    <label>Position Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>