force-app/main/default/objects/JobPosition__c/fields/Total_number_of_applications__c.field-meta.xml
<CustomField>
    <fullName>Total_number_of_applications__c</fullName>
    <label>Total number of applications</label>
    <summaryForeignKey>JobApplication__c.JobPosition__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>