force-app/main/default/objects/JobPosition__c/fields/Willing_to_work_remote__c.field-meta.xml
<CustomField>
    <fullName>Willing_to_work_remote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Willing to work remote?</label>
    <type>Checkbox</type>
</CustomField>