force-app/main/default/objects/JobPosition__c/recordTypes/External_Position.recordType-meta.xml
<RecordType>
    <fullName>External_Position</fullName>
    <active>true</active>
    <label>External Position</label>
</RecordType>