force-app/main/default/objects/JobPosition__c/recordTypes/Internal_Position.recordType-meta.xml
<RecordType>
    <fullName>Internal_Position</fullName>
    <active>true</active>
    <label>Internal Position</label>
</RecordType>