force-app/main/default/objects/JobPosition__c/validationRules/Future_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Future_Date</fullName>
    <active>true</active>
    <description>When the user creates a record - Job position Open Due Date can not be in the past.</description>
    <errorConditionFormula>Open_Due_Date__c  &lt; TODAY()</errorConditionFormula>
    <errorDisplayField>Open_Due_Date__c</errorDisplayField>
    <errorMessage>Selected date in the past!</errorMessage>
</ValidationRule>