force-app/main/default/objects/JobPosition__c/validationRules/HR_Manager_from_US.validationRule-meta.xml
<ValidationRule>
    <fullName>HR_Manager_from_US</fullName>
    <active>true</active>
    <description>For Job Position is USA Location, HR Manager Mailing Address should be US or United States or USA</description>
    <errorConditionFormula>IF(ISPICKVAL(Location__c,&apos;USA&apos;), IF(OR(HR_Manager__r.MailingCountry = &apos;US&apos;,HR_Manager__r.MailingCountry = &apos;USA&apos;,HR_Manager__r.MailingCountry = &apos;United States&apos;),false,true ), false)</errorConditionFormula>
    <errorMessage>HR Manager Mailing Address should be US or United States or USA</errorMessage>
</ValidationRule>