force-app/main/default/objects/JobPosition__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CandidateLevel__c</columns>
    <columns>Location__c</columns>
    <columns>Position_Budget__c</columns>
    <columns>Total_number_of_applications__c</columns>
    <columns>Company_offices__c</columns>
    <columns>Min_Expected_Salary__c</columns>
    <columns>Max_Expected_Salary__c</columns>
    <columns>Open_Due_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>